# prospera

./: .env.example  DEPLOYMENT_PACKAGE.md  GITHUB_COMPLETE_SETUP.md  GITHUB_SETUP.md  README.md  REQUIREMENTS.txt  app.py  deploy.sh  landing_page.html  pyproject.toml  requirements.txt  test_grok_api.py  test_perplexity_api.py
File 2: src/database/: db_service_simple.py
attached_assets/: Pasted--Business-Directory-Import-System-Complete-Implementation-1-Directory-Data-Aggregator-src--1749404191697_1749404191698.txt  Pasted--Business-Profile-System-Implementation-1-Business-Profile-Manager-src-profile-business-prof-1749395670328.txt  Pasted--Complete-Industry-Classification-System-for-Business-Directory-Import-NAICS-Overview-N-1749405805494_1749405805495.txt  Pasted--Complete-Report-Delivery-System-Full-Code-Stack-1-Email-Template-System-src-delivery-emai-1749402606816_1749402606817.txt  Pasted--SME-AI-Agent-MVP-Complete-Implementation-Guide-Project-Setup-1-Create-Project-Structur-1749394692672.txt
data/raw/: agriculture_20250609_194452.json  agriculture_20250609_194527.json  consumer_goods_20250608_150954.json  fashion_apparel_20250608_163010.json  fashion_apparel_20250608_170121.json  fashion_apparel_20250608_172120.json
docs/: API_SETUP.md
src/: __init__.py
src/ai/: grok_client.py  perplexity_client.py
src/analysis/: ai_analyzer.py  business_intelligence.py
src/chat/: __init__.py  ai_chat_interface.py  chat_utils.py  simple_chat.py
src/database/: db_service.py  db_service_simple.py  models.py  repository.py
src/delivery/: __init__.py  email_templates.py  (+1 more)
(+17 files in other folders)
