[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.11",
    "alembic>=1.16.1",
    "asyncio-throttle>=1.0.2",
    "beautifulsoup4>=4.13.4",
    "jinja2>=3.1.6",
    "newsapi-python>=0.2.7",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
]
